--- a/index.html
+++ b/index.html
@@ -59,24 +59,27 @@
     img{max-width:100%;height:auto;display:block}
     html{scroll-behavior:smooth}
 
-    /* ✅ ОДНА ФОТКА ФОНОМ НА ВЕСЬ САЙТ */
+    /* ✅ ОДНА ФОТКА ФОНОМ НА ВЕСЬ САЙТ (фикс “приближения” на мобиле) */
+    .siteBg, .siteDim, .snow{
+      position:fixed;
+      top:0; left:0;
+      width:100vw;
+      height:100vh;
+      pointer-events:none;
+    }
+    @supports (height: 100svh){
+      .siteBg, .siteDim, .snow{ height:100svh; } /* стабильная высота => меньше “зумов” при скролле */
+    }
+
     .siteBg{
-      position:fixed; inset:0; z-index:-20;
+      z-index:-20;
       background-image: url("hero-desktop.png");
       background-size: cover;
       background-repeat:no-repeat;
       background-position: 78% 42%;
-      filter:none;
-      transform:none;
+      transform: translateZ(0);
+      will-change: transform;
     }
-    @media (min-width: 980px){
-      .siteBg{ background-attachment: fixed; }
-    }
-    @media (max-width: 979px){
-      .siteBg{ background-attachment: scroll; }
-    }
-
-    /* ✅ Мобайл-фото (9:16) */
     @media (max-width: 520px){
       .siteBg{
         background-image: url("вдофыв.png");
@@ -84,33 +87,56 @@
       }
     }
 
-    /* ✅ ЛЕГКОЕ затемнение фото (чуть-чуть) */
+    /* ✅ ЛЕГКОЕ затемнение фото */
     .siteDim{
-      position:fixed; inset:0; z-index:-19;
-      pointer-events:none;
+      z-index:-19;
       background:
-        linear-gradient(180deg, rgba(0,0,0,.18) 0%, rgba(0,0,0,.30) 100%),
+        linear-gradient(180deg, rgba(0,0,0,.16) 0%, rgba(0,0,0,.30) 100%),
         radial-gradient(1200px 720px at 30% 35%, rgba(255,255,255,.08), rgba(255,255,255,0) 60%),
         radial-gradient(900px 620px at 80% 70%, rgba(0,0,0,.14), rgba(0,0,0,0) 62%);
-      opacity:1;
     }
 
-    /* ✅ снег за карточками */
+    /* ✅ УСИЛЕННЫЙ СНЕГ (3 слоя, но оптимизировано) */
     .snow{
-      position:fixed; inset:0; z-index:-9;
-      pointer-events:none;
-      opacity:.14;
-      background-image:
-        radial-gradient(circle, rgba(255,255,255,.62) 0 1.1px, transparent 1.7px),
-        radial-gradient(circle, rgba(255,255,255,.40) 0 1.0px, transparent 1.7px);
-      background-size: 240px 240px, 360px 360px;
-      background-position: 0 -280px, 0 -560px;
-      animation: snowFall 22s linear infinite;
+      z-index:-9;
+      opacity:.20; /* сильнее */
       mix-blend-mode: screen;
     }
-    @keyframes snowFall{
-      to{ background-position: 110px 1400px, -140px 1600px; }
+    .snow::before,
+    .snow::after{
+      content:"";
+      position:absolute; inset:0;
+      background-repeat: repeat;
+      pointer-events:none;
     }
+    .snow{
+      background-image:
+        radial-gradient(circle, rgba(255,255,255,.62) 0 1.2px, transparent 1.8px),
+        radial-gradient(circle, rgba(255,255,255,.42) 0 1.0px, transparent 1.7px);
+      background-size: 240px 240px, 380px 380px;
+      background-position: 0 -280px, 0 -560px;
+      animation: snowFallA 22s linear infinite;
+    }
+    .snow::before{
+      background-image:
+        radial-gradient(circle, rgba(255,255,255,.32) 0 1.6px, transparent 2.3px);
+      background-size: 520px 520px;
+      background-position: 0 -700px;
+      animation: snowFallB 34s linear infinite;
+      opacity:.70;
+    }
+    .snow::after{
+      background-image:
+        radial-gradient(circle, rgba(255,255,255,.26) 0 2.0px, transparent 2.8px);
+      background-size: 760px 760px;
+      background-position: 0 -980px;
+      animation: snowFallC 46s linear infinite;
+      opacity:.55;
+    }
+
+    @keyframes snowFallA{ to{ background-position: 110px 1400px, -140px 1600px; } }
+    @keyframes snowFallB{ to{ background-position: -140px 1700px; } }
+    @keyframes snowFallC{ to{ background-position: 180px 1900px; } }
 
     .progress{
       position:fixed; top:0; left:0; height:3px; width:0%;
@@ -212,13 +238,7 @@
       box-shadow:0 18px 55px rgba(11,92,255,.22);
       transition:.2s;white-space:nowrap;position:relative;overflow:hidden
     }
-    .cta::after{
-      content:"";position:absolute;inset:-70% -80%;
-      background: radial-gradient(circle, rgba(255,255,255,.32), transparent 60%);
-      transform: translateX(-40%);opacity:0;transition:.25s;mix-blend-mode: screen
-    }
     .cta:hover{transform: translateY(-1px) scale(1.02)}
-    .cta:hover::after{opacity:.9; transform: translateX(30%)}
 
     .menuBtn{
       display:none;width:44px;height:44px;border-radius:14px;
@@ -261,8 +281,8 @@
       border:none;
       background: linear-gradient(135deg, var(--brand), var(--brand2));
       box-shadow:0 18px 55px rgba(11,92,255,.20);
-      backdrop-filter: none;
-      -webkit-backdrop-filter: none;
+      backdrop-filter:none;
+      -webkit-backdrop-filter:none;
     }
 
     section{padding:84px 0}
@@ -273,10 +293,13 @@
       align-items:center;
     }
 
-    /* ✅ GLASS BLUR НА ВСЕ "карточки" */
+    /* ✅ GLASS BLUR НА ВСЕ КАРТОЧКИ + оптимизация, чтобы blur не “догружался” */
     .glass{
       backdrop-filter: blur(18px) saturate(1.10);
       -webkit-backdrop-filter: blur(18px) saturate(1.10);
+      will-change: backdrop-filter;
+      transform: translateZ(0);
+      contain: paint;
     }
 
     .card{
@@ -289,11 +312,11 @@
       box-shadow: var(--shadow);
       position:relative;
       overflow:hidden;
-      transform: translateZ(0);
       transition: transform .22s ease, box-shadow .22s ease, border-color .22s ease;
       will-change: transform;
+      transform: translateZ(0);
+      contain: paint;
     }
-    .card.glass{}
     .card:hover{
       transform: translateY(-4px);
       box-shadow: var(--shadow2);
@@ -307,6 +330,31 @@
       pointer-events:none;
       mix-blend-mode: screen;
       filter: blur(.2px);
+    }
+
+    /* Premium micro-glow (только на десктопе) */
+    @media (hover: hover) and (pointer: fine){
+      .cta::before,
+      .btn.primary::before,
+      .codeBox::before{
+        content:"";
+        position:absolute;
+        inset:-2px;
+        border-radius:inherit;
+        background: linear-gradient(90deg, transparent, rgba(255,255,255,.22), transparent);
+        transform: translateX(-120%) rotate(10deg);
+        opacity:0;
+        pointer-events:none;
+      }
+      .cta:hover::before,
+      .btn.primary:hover::before,
+      .codeBox:hover::before{
+        opacity:1;
+        animation: sheen 1.1s ease;
+      }
+      @keyframes sheen{
+        to{ transform: translateX(120%) rotate(10deg); }
+      }
     }
 
     .tilt{transform-style:preserve-3d}
@@ -420,7 +468,7 @@
     }
     @keyframes ctaPulse{
       0%,100%{filter: saturate(1); box-shadow:0 18px 55px rgba(11,92,255,.20)}
-      50%{filter: saturate(1.15); box-shadow:0 22px 70px rgba(11,92,255,.26)}
+      50%{filter: saturate(1.12); box-shadow:0 22px 70px rgba(11,92,255,.26)}
     }
 
     .dot{
@@ -460,8 +508,9 @@
       cursor:pointer; user-select:none;
       transition: transform .2s ease, border-color .2s ease;
       touch-action: manipulation;
+      position:relative;
+      overflow:hidden;
     }
-    .codeBox.glass{}
     .codeBox:hover{transform: translateY(-1px); border-color: rgba(24,208,196,.34)}
     .codeText{display:flex; align-items:baseline; gap:10px; flex-wrap:wrap;}
     .codeLabel{font-size: 12px;font-weight: 900;color: rgba(238,242,255,.70);}
@@ -486,8 +535,8 @@
       border:1px solid rgba(255,255,255,.10);
       background: rgba(255,255,255,.03);
       margin-bottom:10px;
+      contain: paint;
     }
-    .step.glass{}
     .num{
       width:26px;height:26px;border-radius:999px;
       display:grid;place-items:center;
@@ -506,8 +555,8 @@
       border-radius:16px;
       border:1px solid rgba(255,255,255,.12);
       background: rgba(255,255,255,.04);
+      contain: paint;
     }
-    .input.glass{}
     .input label{color: rgba(238,242,255,.70); font-weight:900; font-size:13px}
     .input input{
       width:100%;
@@ -536,8 +585,8 @@
       border-radius:16px;
       padding:12px;
       color:rgba(238,242,255,.74);
+      contain: paint;
     }
-    .box.glass{}
     .box b{display:block; font-size:14px; font-weight:1000; color:rgba(238,242,255,.92)}
     .box span{display:block; margin-top:4px; font-size:13px; line-height:1.45}
 
@@ -551,8 +600,8 @@
       background: rgba(255,255,255,.03);
       overflow:hidden;
       box-shadow: var(--shadow);
+      contain: paint;
     }
-    .aboutAccordion.glass{}
     .aboutAccordion summary{
       cursor:pointer;
       list-style:none;
@@ -582,14 +631,14 @@
       transition:.2s;
       position:relative;
       overflow:hidden;
+      contain: paint;
     }
-    .miniCard.glass{}
     .miniCard:hover{transform: translateY(-2px); background: rgba(255,255,255,.06)}
     .miniCard h3{margin:0 0 8px; font-size:16px; letter-spacing:-.2px}
     .miniCard p{margin:0; color: var(--muted); font-size:13.5px; line-height:1.65}
     .miniCard ul{margin:10px 0 0; padding-left:18px; color: var(--muted); font-size:13.5px; line-height:1.65}
 
-    /* FAQ */
+    /* FAQ (✅ убрали reveal, чтобы blur был сразу) */
     .faqGrid{display:grid; grid-template-columns: 1fr 1fr; gap:12px}
     .faqGrid details{
       background:rgba(255,255,255,.04);
@@ -599,8 +648,12 @@
       transition:.25s;
       position:relative;
       overflow:hidden;
+      contain: paint;
+      backdrop-filter: blur(18px) saturate(1.10);
+      -webkit-backdrop-filter: blur(18px) saturate(1.10);
+      will-change: backdrop-filter;
+      transform: translateZ(0);
     }
-    .faqGrid details.glass{}
     .faqGrid details:hover{background:rgba(255,255,255,.06)}
     .faqGrid summary{cursor:pointer; font-weight:1000; list-style:none; touch-action: manipulation;}
     .faqGrid summary::-webkit-details-marker{display:none}
@@ -687,26 +740,42 @@
       .menuBtn{display:flex}
     }
 
+    /* ✅ Телефон: карточки меньше + меньше нагрузка */
     @media (max-width: 520px){
-      section{padding:66px 0}
-      .hero{padding:52px 0 34px; min-height: calc(92vh - 110px);}
+      :root{ --radius: 20px; }
+
+      section{padding:58px 0}
+      .hero{padding:48px 0 28px; min-height: calc(90vh - 110px);}
       .wrap{padding:0 14px}
 
-      .heroMain{padding:18px}
-      .lead{font-size:15.5px}
-      .chips{gap:8px}
-      .chip{font-size:12.5px}
+      .heroMain{padding:14px}
+      h1{font-size: clamp(26px, 7vw, 42px);}
+      .lead{font-size:15px; margin-bottom:10px}
+      .chips{gap:8px; margin-top:12px}
+      .chip{font-size:12.2px; padding:7px 10px}
 
       .heroActions{display:grid; grid-template-columns: 1fr 1fr; gap:10px}
-      .btn{min-width:0; width:100%}
+      .btn{min-width:0; width:100%; height:50px; border-radius:14px}
+      .promoBar{padding:12px}
+      .codeValue{font-size:20px}
 
-      .snow{opacity:.12; animation-duration: 26s;}
-
-      /* на мобиле blur чуть легче для производительности */
+      /* легче blur на телефоне */
       .glass{
-        backdrop-filter: blur(14px) saturate(1.08);
-        -webkit-backdrop-filter: blur(14px) saturate(1.08);
+        backdrop-filter: blur(12px) saturate(1.06);
+        -webkit-backdrop-filter: blur(12px) saturate(1.06);
       }
+      .faqGrid details{
+        backdrop-filter: blur(12px) saturate(1.06);
+        -webkit-backdrop-filter: blur(12px) saturate(1.06);
+      }
+
+      /* чуть меньше эффектов для лагов */
+      .card:hover, .miniCard:hover{transform:none}
+      .btn.primary{animation:none}
+      .garlandStrip::before,.garlandStrip::after{animation:none}
+
+      /* снег сильнее оставили, но без “screen” — чуть легче */
+      .snow{opacity:.19; mix-blend-mode: normal;}
     }
 
     @media (hover: none), (pointer: coarse){
@@ -721,12 +790,11 @@
       html{scroll-behavior:auto}
       .reveal{transition:none}
       .grad{animation:none}
-      .snow{animation:none}
+      .snow, .snow::before, .snow::after{animation:none}
       .chip{animation:none}
       .card, .miniCard{transition:none}
       .garlandStrip::before, .garlandStrip::after{animation:none}
       .btn.primary{animation:none}
-      .siteBg{background-attachment: scroll;}
     }
   </style>
 </head>
@@ -1003,28 +1071,29 @@
           </div>
         </div>
 
-        <div class="faqGrid reveal">
-          <details class="glass">
+        <!-- ✅ БЕЗ reveal: blur будет сразу, без “догрузки” -->
+        <div class="faqGrid">
+          <details>
             <summary>Безопасно ли играть на сайте 1Win?</summary>
             <p>Платформа заявляет защиту данных. Перед игрой проверь актуальные правила и условия на стороне 1win.</p>
           </details>
 
-          <details class="glass">
+          <details>
             <summary>Во что можно сыграть в 1Win?</summary>
             <p>Слоты, live-казино, рулетки и карточные игры. Доступность зависит от региона и правил платформы.</p>
           </details>
 
-          <details class="glass">
+          <details>
             <summary>Зачем нужна верификация?</summary>
             <p>Обычно — подтверждение личности/возраста и безопасность аккаунта. Требования зависят от правил 1win.</p>
           </details>
 
-          <details class="glass">
+          <details>
             <summary>Где вводить промокод SMOG?</summary>
             <p>Промокод <b>SMOG</b> вводится <b>при регистрации</b>. Его можно скопировать одним нажатием на странице.</p>
           </details>
 
-          <details class="glass">
+          <details>
             <summary>Что делать, если бонус не начислился?</summary>
             <p>Проверь: промокод введён при регистрации, выполнены условия. Если всё ок — напиши в поддержку.</p>
           </details>
@@ -1111,7 +1180,7 @@
     try{
       const io = new IntersectionObserver((entries)=> {
         for (const ent of entries) if (ent.isIntersecting) ent.target.classList.add("on");
-      }, { threshold: 0.12 });
+      }, { threshold: 0.12, rootMargin: "120px 0px 120px 0px" });
       document.querySelectorAll(".reveal").forEach(el => io.observe(el));
     }catch{
       document.querySelectorAll(".reveal").forEach(el => el.classList.add("on"));
@@ -1210,29 +1279,22 @@
     });
     calc();
 
-    // ✅ About accordion:
-    // Открыт на десктопе, закрыт на мобиле — и НЕ трогаем при "скролл-ресайзах" (адресная строка)
+    // About accordion: desktop open, mobile closed (и не дергаем при “адресной строке”)
     const aboutAcc = document.getElementById("aboutAcc");
     let lastIsMobile = null;
-
     function applyAboutDefaultOnceOrOnModeChange(){
       if (!aboutAcc) return;
       const isMobile = matchMedia("(max-width: 720px)").matches;
-
-      // первый запуск
       if (lastIsMobile === null){
         aboutAcc.open = !isMobile;
         lastIsMobile = isMobile;
         return;
       }
-
-      // меняем только если реально перешли между моб/десктоп режимом
       if (isMobile !== lastIsMobile){
         aboutAcc.open = !isMobile;
         lastIsMobile = isMobile;
       }
     }
-
     applyAboutDefaultOnceOrOnModeChange();
     addEventListener("resize", applyAboutDefaultOnceOrOnModeChange, {passive:true});
 
